--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-polyfill": "^6.26.0",
     "bytes": "^3.0.0",
     "colors": "^1.1.2",
+    "fast-url-parser": "^1.1.3",
     "mime": "^2.0.3",
     "urlencode": "^1.1.0",
     "uuid": "^3.1.0"
