:zap: Organiser can now handle ~70% more requests than 1.0.0.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "organiser",
+  "name": "organiser-next",
   "version": "1.1.0",
   "description": "An organic web framework for organized web servers.",
   "keywords": [
