--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "babel src --out-dir dist",
-    "test": "echo \"Error: no tests specified yet. (WIP)\" && exit 1"
+    "build": "standard --verbose | snazzy && node build/index.js",
+    "test": "standard --verbose | snazzy && echo \"Error: no tests specified yet. (WIP)\" && exit 1"
   },
   "author": "Arthur A. Bergamaschi <arthurbergmz@gmail.com>",
   "license": "MIT",
@@ -39,20 +39,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fatec-taquaritinga/organiser.git"
+    "url": "git+https://github.com/fatec-taquaritinga/organiser.git"
   },
+  "bugs": {
+    "url": "https://github.com/fatec-taquaritinga/organiser/issues"
+  },
+  "homepage": "https://github.com/fatec-taquaritinga/organiser#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/core": "^7.0.0-beta.32",
+    "@babel/preset-env": "^7.0.0-beta.32",
     "babel-eslint": "^8.0.2",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "eslint": "^4.11.0",
+    "organiser-build": "^1.0.0",
+    "snazzy": "^7.0.0",
     "standard": "^10.0.3"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "@babel/polyfill": "^7.0.0-beta.32",
     "bytes": "^3.0.0",
     "colors": "^1.1.2",
     "fast-url-parser": "^1.1.3",
