--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "express"
   ],
   "main": "index.js",
-  "types": "index.d.ts",
+  "types": "typings/index.d.ts",
   "scripts": {
     "build": "standard --verbose | snazzy && node build/index.js",
     "test": "standard --verbose | snazzy && echo \"Error: no tests specified yet. (WIP)\" && exit 1"
@@ -35,7 +35,15 @@
   "author": "Arthur A. Bergamaschi <arthurbergmz@gmail.com>",
   "license": "MIT",
   "standard": {
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "ignore": [
+      "node_modules",
+      "dist",
+      "typings",
+      "media",
+      "docs",
+      ".vscode"
+    ]
   },
   "repository": {
     "type": "git",
@@ -46,20 +54,21 @@
   },
   "homepage": "https://github.com/fatec-taquaritinga/organiser#readme",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.32",
-    "@babel/preset-env": "^7.0.0-beta.32",
-    "babel-eslint": "^8.0.2",
-    "eslint": "^4.11.0",
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.36",
+    "@babel/preset-env": "^7.0.0-beta.36",
+    "babel-eslint": "^8.1.2",
+    "eslint": "^4.14.0",
     "organiser-build": "^1.0.0",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.32",
+    "@babel/polyfill": "^7.0.0-beta.36",
     "bytes": "^3.0.0",
     "colors": "^1.1.2",
     "fast-url-parser": "^1.1.3",
-    "mime": "^2.0.3",
+    "mime": "^2.1.0",
     "urlencode": "^1.1.0",
     "uuid": "^3.1.0"
   },
@@ -73,7 +82,7 @@
     "CHANGELOG.md",
     "LICENSE",
     "index.js",
-    "index.d.ts",
-    "package.json"
+    "package.json",
+    "package-lock.json"
   ]
 }
