--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "index.js",
     "package.json",
     "package-lock.json"
-  ]
+  ],
+  "dependencies": {
+    "version-notifier": "0.0.1"
+  }
 }
